@@ -234,4 +234,14 @@ class Foo {
 	]]>
 	</code>
 	</test-code>
+	<test-code>
+		<description>#878 don't flag abstract methods even if checkall property is set when checking an abstract class</description>
+		<rule-property name="checkAll">true</rule-property>
+		<expected-problems>0</expected-problems>
+		<code><![CDATA[
+abstract class Foo {
+    protected abstract void foo(Long s);
+}
+		]]></code>
+	</test-code>
 </test-data>
